# fishbonechain

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  agent.md  package-lock.json  package.json  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
deploy/: .gitignore  config.progressive-18vm.toml  config.toml  pyproject.toml
deploy/cmd/: control.py  deploy.py  logs.py  status.py
deploy/fishbone/: config.py  remote.py  service.py
deploy/systemd/: fishbone-monitor.service
deploy/tests/: test_remote_system_ssh_callers.py
docs/: README.md  Readme.md  capacity-experiment.md  cdt.md  cross_chain_proof.md  developer-guide.md  experiment-report.md  fishbone-monitor.md  fishbonechain.md  implementation-plan.md  implementation-record.md  isolation-experiment.md  linear-scaling-mainchain-load.md  liquidity-experiment.md  topology-diagram.md
docs/architecture/: data-trade-security-model.md  platform-architecture.md  platform-business-model.md  topology-diagram.md  web-access-wallet-architecture.md
docs/development/: developer-guide.md
docs/experiments/: capacity-experiment.md  data-trade-validation.md  experiment-report.md  isolation-experiment.md  linear-scaling-mainchain-load.md  liquidity-experiment.md
docs/experiments/progressive_tps/: README.md  child1_tuning.md  child1_tuning_summary.csv  child3_tuning.md  mainchain_capacity_occupancy_plan.md  progressive_tps_experiment_lessons.md  progressive_tps_summary.csv
docs/figures/data/: exp_a_state.csv  exp_b_state.csv  exp_c_state.csv  exp_capacity_summary.csv  exp_e_fund_state.csv  exp_e_fund_state_v2.csv  exp_e_fund_state_v4.csv  exp_e_fund_state_v5.csv  exp_liquidity_horizon_summary.csv
docs/implementation/: chain-event-indexer-state-sync.md  data-trade-cli-api-boundary.md  data-trade-demo-guide.md  data-trade-evidence.md  data-trade-flow.md  data-trade-implementation.md  data-trade-paper-gap-matrix.md  data-trade-stage12-evidence-index.md  data-trade-stage14-evidence-index.md  data-trade-zk-verifier-plan.md  implementation-plan.md  implementation-record.md  offchain-job-executor.md  platform-backend-skeleton.md
docs/internal/: agent-collaboration.md
docs/internal/agent-plans/: 2026-06-11-fishbone-monitor.md  2026-06-12-monitor-cached-logs-and-zh-ui.md  2026-06-14-platform-scene-decoupling.md  2026-06-15-data-trade-e2e-binding-zk-attestation.md  2026-06-15-data-trade-gnark-zk-attestation.md  (+29 more)
docs/operations/: subchain-deployment-runbook.md
docs/plan/: experiment-liquidity.md  experiment-run-plan.md  experiment-throughput.md  implementation-record.md  lessons-learned.md  phase-deploy-multinode.md  phase0-environment.md  phase1-main-pallets.md  phase2-child-chain.md  phase3-cdt-data-trading.md
examples/midterm_report/: 05_performance_evaluation.md
monitor/: package-lock.json  package.json  tsconfig.json
monitor/public/: index.html
monitor/src/: config.ts  index.ts  scheduler.ts
monitor/test/: api.test.ts  apiContract.test.ts  config.test.ts  dashboard.test.ts  inventory.test.ts  logApi.test.ts  logCollector.test.ts  prometheus.test.ts  schedulerLogs.test.ts  smoke.test.ts  store.test.ts  substratePrometheus.test.ts  substrateRpc.test.ts
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs  service_babe.rs
pallets/ccmc/: Cargo.toml
pallets/chain-profile/: Cargo.toml
pallets/chain-profile/src/: lib.rs  mock.rs  tests.rs  types.rs
pallets/crowdsource/: Cargo.toml
pallets/crowdsource/src/: lib.rs  mock.rs  tests.rs  types.rs
pallets/data-registry/: Cargo.toml
pallets/fmc/: Cargo.toml
pallets/main-escrow/: Cargo.toml
pallets/main-escrow/src/: lib.rs  mock.rs  tests.rs  types.rs
pallets/template/: Cargo.toml
pallets/trade-session/: Cargo.toml
references/data_trade_code/: .gitignore  Readme.md  test.json
references/data_trade_paper/: main.bib  main.tex
references/efficient_cross_chain_proof_code/: .gitignore  README.md
runtime/: Cargo.toml  build.rs
runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs  runtime_aura.rs  runtime_babe.rs  runtime_crowdsource.rs  runtime_data_trade.rs  runtime_main.rs
scripts/: analyze_results.py  bridge.js  capacity_monitor.js  chain_event_indexer.js  check-blocks.sh  data_trade_cli.js  data_trade_flow.js  deploy_child_chains.py  dev_deploy_chains.sh  dev_redeploy_clean_chains.sh  dev_scan_vms.py  dev_scan_vms.sh  dev_stop_clean_chains.sh  e2e-verify.js  finalize_progressive_epochs.js  gen_child_specs.py  mainchain_transfer_burst.js  metrics.js  metrics_fund.js  metrics_main.js  plot_capital_capacity.py  plot_isolation_comparison.py  plot_origin_style_preview.py  plot_progressive_tps.py  plot_results.py  render_topology_diagram.py  report_scale_mainchain_at_6.sh  reset_child_chains.sh  reset_exp.js  restart_exp.sh  run_data_trade_validation.sh  run_data_trade_vm_regression.sh  run_exp_a.sh  run_exp_c.sh  run_exp_capacity.sh  run_exp_capacity_reset_each_n.sh  run_exp_fund.sh  run_exp_progressive_tps.sh  run_exp_scale.sh  run_exp_scale_mainchain.sh  (+16 more)
scripts/bridges/: crowdsource.js  data_trade.js
scripts/fixtures/: data_trade_business_sample.json
scripts/lib/: chain_event_normalizer.js  data_trade_binding.js  data_trade_events.js  data_trade_evidence_correlation.js  data_trade_sample.js  data_trade_state_sync.js  data_trade_validation_summary.js  hash_chain.js  trade_profile.js  vm_regression_summary.js  wait_for_ws_chain.js  zk_artifact.js  zk_attestation.js  zk_verifier_client.js
scripts/platform-backend/: job_executor.js  server.js
scripts/platform-model/: types.ts
scripts/profiles/: chains.json  progressive_tps.json  progressive_tps_18vm.json
scripts/reference-audit/: collect_scidatahub_context.sh  opencode_scidatahub_audit.sh  prepare_scidatahub_opencode_jobs.sh
tests/: test_origin_style_preview.py  test_progressive_deploy_profile.py  test_progressive_mainchain_setup.py  test_progressive_tps_profile.py  test_progressive_tps_tools.py
tools/data-trade-zk/: README.md  go.mod
(+584 files in other folders)
